fixed feignclient trouble, checked find that springboot can not scan feignclient,then that consumercontroller autired interface failure. so ,i add a confeguration for springapplicationboot, add the path of feignclient.

--- a/springbootmybatisspringcloud/goverment/src/main/resources/application.yml
+++ b/springbootmybatisspringcloud/goverment/src/main/resources/application.yml
@@ -7,12 +7,13 @@ spring:
 
 eureka:
   client:
-    registerWithEureka: true
+    registerWithEureka: false
     fetchRegistry: false
     serviceUrl: #Eureka客户端与Eureka服务端的交互地址，高可用状态配置对方的地址，单机状态配置自己（如果不配置则默认本机8761端口）
-      defaultZone: http://127.0.0.1:${PORT1}/eureka,http://127.0.0.1:${PORT2}/eureka
+      defaultZone: http://127.0.0.1:${PORT1}/eureka
+      #defaultZone: http://127.0.0.1:${PORT1}/eureka,http://127.0.0.1:${PORT2}/eureka
   server:
-    enable-self-preservation: false
+    enable-self-preservation: true
     eviction-interval-timer-in-ms: 6000
   instance:
-    hostname: instances1
+    hostntances1ame: ins
