--- a/springbootmybatisspringcloud/Controller/src/main/resources/application.yml
+++ b/springbootmybatisspringcloud/Controller/src/main/resources/application.yml
@@ -19,7 +19,8 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-       defaultZone: http://127.0.0.1:10000/eureka,http://127.0.0.1:10001/eureka,http://127.0.0.1:10002/eureka
+       defaultZone: http://127.0.0.1:10000/eureka
+      #defaultZone: http://127.0.0.1:10000/eureka,http://127.0.0.1:10001/eureka,http://127.0.0.1:10002/eureka
   instance:
     prefer-ip-address: true
 
