--- a/springbootmybatisspringcloud/consumer/src/main/resources/application.yml
+++ b/springbootmybatisspringcloud/consumer/src/main/resources/application.yml
@@ -8,7 +8,7 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-       defaultZone: http://127.0.0.1:10000/eureka,http://127.0.0.1:10001/eureka,http://127.0.0.1:10002/eureka
+       defaultZone: http://127.0.0.1:10000/eureka #ltZone: http://127.0.0.1:10000/eureka,http://127.0.0.1:10001/eureka,http://127.0.0.1:10002/eureka
   instance:
     prefer-ip-address: true
 
